Replace new Integer(...) with Integer.valueOf(...)